<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8fbc8f"
    android:backgroundTint="#8fbc8f"
    android:orientation="vertical"
    android:padding="16dp"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculator_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/resistor_image_view"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/calculadora"
        app:srcCompat="@drawable/resistencia" />

    <TextView
        android:id="@+id/primera_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/firstsecond"
        android:textColor="#332E2E"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/primera_spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#888585" />

    <TextView
        android:id="@+id/segundo_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/second"
        android:textColor="#332E2E"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/segundo_spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#888585" />

    <TextView
        android:id="@+id/tercera_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/third"
        android:textColor="#332E2E"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/tercero_spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#888585" />

    <TextView
        android:id="@+id/cuarto_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/fourth"
        android:textColor="#332E2E"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/cuarto_spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:background="#888585" />

    <TextView
        android:id="@+id/sexto_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/finalvalue"
        android:textColor="#332E2E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectt"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#AACCAA"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#332E2E"
        android:textColorLink="#FFFFFF" />

</LinearLayout>